--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Kalp's voyage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Personal Website of Kalp garg from IIT Roorkee. Lives in Bangalore/Bengaluru. Originally from Jaipur, India"
+		<meta name="keywords" content="HTML,CSS,XML,JavaScript,Kalp,Garg,IIT,Roorkee,NTU,Enphase,Bajaj,Jaipur,Bangalore">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
