change blog title pic

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Kalp Garg</h1>
-							<p>Electrical Engineer who loves to travel, play flute and go to gym.</p>
+							<p>Electrical Engineer/Robotics Enthusiast who loves to travel, play flute and go to gym.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -42,7 +42,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/ntu_blog/kalp1.jpeg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Research Internship at NTU</h2>
