added title bar logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Personal Website of Kalp garg from IIT Roorkee. Lives in Bangalore/Bengaluru. Originally from Jaipur, India"/>
 		<meta name="keywords" content="HTML,CSS,XML,JavaScript,Kalp,Garg,IIT,Roorkee,NTU,Enphase,Bajaj,Jaipur,Bangalore"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="/images/Yin_and_Yang_symbol.png" type="image/x-icon"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -46,7 +47,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Research Internship at NTU</h2>
-									<p>This blog entails the experience I had during my research internship done at NTU. It was also submitted to WatchOut(Media body of IITR)</p>
+									<p>This blog entails the experience I had during my research internship at NTU. This blog was also submitted to WatchOut(Media body of IITR)</p>
 									<ul class="actions">
 										<li><a href="ntu_blog.html" class="button">Read Full Blog</a></li>
 									</ul>
