--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
 							<p>Web apps designed by me. Some of them are useful and some are just hobby thing.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fas fa-chart-line"></span>
 									<h3><a href="stock_forecast.html">Stock Market Forecaster</a></h3>
 									<p>This app requires tickertape stock symbol. Thereafter it forecast the data based on the previous years data</p>
+								</section>
+								<section>
+									<span class="icon solid major fas fa-book-reader"></span>
+									<h3><a href="news.html">News and Notes App</a></h3>
+									<p>This app would show the news and also you can take/delete notes</p>
 								</section>
 							</div>
 							<ul class="actions">
