--- a/news.html
+++ b/news.html
@@ -26,7 +26,8 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">News and Notes App</h1>
-							<h3>User requires to sign up befre accessing its pre-saved notes and news. User can fetch latest news. Convert into local language. Delete notes</h3>
+							<h3>User requires to sign up before accessing their pre-saved notes and news. 
+								Users can fetch the latest news. Convert into the local language. Delete notes, etc..</h3>
 							<hr>
 							<h2><a href="https://news-app-kgarg.onrender.com/">News App</a></h2>
 						</div>
