update about me and get in touch section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Blogs</a></li>
-							<li><a href="#two">Web apps</a></li>
+							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Personal Info</a></li>
 						</ul>
 					</nav>
@@ -33,7 +33,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Kalp Garg</h1>
-							<p>Electrical Engineer/Robotics Enthusiast who loves to travel, play flute and go to gym.</p>
+							<p>I'm passionate about robotics, control systems, reinforcement learning, and optimization theory. I completed my B.Tech in Electrical Engineering from the Indian Institute of Technology Roorkee with CGPA of 9.3/10, where I built a strong foundation in both theory and practical applications.Currently, I work as a Controls Engineer at Enphase Energy, where I focus on developing and refining control strategies for both new and existing energy products.</p>
+							<p>I have prior research experience from Nanyang Technological University (NTU), Singapore, where I worked on image processing algorithms to train an Unmanned Surface Vehicle (USV) for autonomous task execution. </p>
+							<p>Outside of work, I stay active by playing badminton, volleyball, and engaging in regular workouts. When I'm not on the court or in the gym, you'll often find me playing the flute, gaming, reading books, or watching movies.</p>
+							<p>I enjoy turning research ideas into practical applications and sharing my implementation experiences through articles. I value clean, readable, and self-contained code—Python is my language of choice.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -42,6 +45,18 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Research Internship at NTU</h2>
+									<p>This blog entails the experience I had during my research internship at NTU. This blog was also submitted to WatchOut(Media body of IITR)</p>
+									<ul class="actions">
+										<li><a href="ntu_blog.html" class="button">Read Full Blog</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -84,10 +99,12 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Whether you're interested in collaborating on research, working together on an open-source project, or just want to say hi—I'd love to hear from you! I'm always open to meaningful conversations around control systems, robotics, reinforcement learning, or anything tech-related.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="POST" action="https://formsubmit.co/dongarg.12@gmail.com">
+										<input type="hidden" name="_captcha" value="true">
+										<input type="hidden" name="_next" value="https://kalpgarg.github.io/thank-you.html">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -103,7 +120,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><button type="submit" class="button submit">Send Message</button></li>
 										</ul>
 									</form>
 								</section>
@@ -139,7 +156,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; 2023. All rights reserved.</li>
+						<li>&copy; 2025. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
