add social links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Kalp Garg</h1>
-							<p>I'm passionate about robotics, control systems, reinforcement learning, and optimization theory. I completed my B.Tech in Electrical Engineering from the Indian Institute of Technology Roorkee with CGPA of 9.3/10, where I built a strong foundation in both theory and practical applications.Currently, I work as a Controls Engineer at Enphase Energy, where I focus on developing and refining control strategies for both new and existing energy products.</p>
+							<h1>About me</h1>
+							<p>I'm passionate about reinforcement learning, robotics, control systems and optimization theory. I completed my B.Tech in Electrical Engineering from the Indian Institute of Technology Roorkee with CGPA of 9.3/10, where I built a strong foundation in both theory and practical applications. Currently, I work as a Staff Controls Engineer at Enphase Energy, where I focus on developing and refining control strategies for both new and existing energy products.</p>
 							<p>I have prior research experience from Nanyang Technological University (NTU), Singapore, where I worked on image processing algorithms to train an Unmanned Surface Vehicle (USV) for autonomous task execution. </p>
 							<p>Outside of work, I stay active by playing badminton, volleyball, and engaging in regular workouts. When I'm not on the court or in the gym, you'll often find me playing the flute, gaming, reading books, or watching movies.</p>
 							<p>I enjoy turning research ideas into practical applications and sharing my implementation experiences through articles. I value clean, readable, and self-contained code—Python is my language of choice.</p>
@@ -57,25 +57,13 @@
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Research Internship at NTU</h2>
-									<p>This blog entails the experience I had during my research internship at NTU. This blog was also submitted to WatchOut(Media body of IITR)</p>
-									<ul class="actions">
-										<li><a href="ntu_blog.html" class="button">Read Full Blog</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
 						
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Web apps</h2>
+							<h2>Projects</h2>
 							<p>Web apps designed by me. Some of them are useful and some are just hobby thing.</p>
 							<div class="features">
 								<section>
@@ -128,20 +116,20 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="#">kalpgarg.12@gmail.com</a>
+											<p>kalpgarg.12@gmail.com</p>
 										</li>
 										<li>
 											<h3>Resume</h3>
-											<a href="#">Link</a>
+											<a>To be added</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+												<li><a href="https://www.facebook.com/kalp.garg.73/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="https://github.com/kalpgarg" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.instagram.com/kalp_garg/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.linkedin.com/in/kalp-garg-10a708138/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
