--- a/ntu_blog.html
+++ b/ntu_blog.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Blogs</a>
+				<a href="index.html#one" class="title">Blogs</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
