--- a/thank-you.html
+++ b/thank-you.html
@@ -11,7 +11,6 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="title">Web apps</a>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -25,15 +24,15 @@
 			<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="inner">
-					<h1 class="major">Thank You 🙏</h1>
-					<p>Your message has been sent successfully. I’ll get back to you as soon as possible.</p>
+					<h1 class="major" style="text-align: center;">Thank You</h1>
+					<p style="text-align: center;">Your message has been sent successfully. I’ll get back to you as soon as possible.</p>
 					
 					<!-- Cute animal image -->
-					<span class="image fit">
-						<img src="https://cdn.pixabay.com/photo/2019/06/20/21/37/bunny-4289584_1280.png" alt="Cute bunny doing namaste" />
+					<span class="image fit" style="text-align: center;">
+						<img src="images/bunny_namaste.jpg" alt="Cute bunny doing namaste" style="max-width: 300px; height: auto; margin: 0 auto; display: block;"/>
 					</span>
 
-					<p>Meanwhile, feel free to explore the rest of the site or <a href="index.html">go back to the homepage</a>.</p>
+					<p style="text-align: center;">Meanwhile, feel free to explore the rest of the site or <a href="index.html">go back to the homepage</a>.</p>
 				</div>
 			</section>
 
