structuring of pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2>Research Internship at NTU</h2>
 									<p>This blog entails the experience I had during my research internship at NTU. This blog was also submitted to WatchOut(Media body of IITR)</p>
 									<ul class="actions">
-										<li><a href="ntu_blog.html" class="button">Read Full Blog</a></li>
+										<li><a href="blogs/ntu_blog.html" class="button">Read Full Blog</a></li>
 									</ul>
 								</div>
 							</div>
@@ -68,12 +68,12 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fas fa-chart-line"></span>
-									<h3><a href="stock_forecast.html">Stock Market Forecaster</a></h3>
+									<h3><a href="projects/stock_forecast.html">Stock Market Forecaster</a></h3>
 									<p>This app requires tickertape stock symbol. Thereafter it forecast the data based on the previous years data</p>
 								</section>
 								<section>
 									<span class="icon solid major fas fa-book-reader"></span>
-									<h3><a href="news.html">News and Notes App</a></h3>
+									<h3><a href="projects/news.html">News and Notes App</a></h3>
 									<p>This app would show the news and also you can take/delete notes</p>
 								</section>
 							</div>
