update image of grad descent

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Blogs</a></li>
 							<li><a href="#two">Projects</a></li>
-							<li><a href="#three">Personal Info</a></li>
+							<li><a href="#three">Get in Touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
+							<a class="image"><img src="images/ntu_blog/kalp4.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Research Internship at NTU</h2>
@@ -57,7 +57,18 @@
 								</div>
 							</div>
 						</section>
-						
+						<section>
+							<a class="image" class="image fit"><img src="images/pid_using_gd/grad_des_main_page.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Optimal PID gains calculation using gradient descent</h2>
+									<p>Optimizing PID Gains with Gradient Descent for a Second-Order System with Delay</p>
+									<ul class="actions">
+										<li><a href="blogs/pid_using_gd.html" class="button">Read Full Article</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>						
 					</section>
 
 				<!-- Two -->
