--- a/blogs/ntu_blog.html
+++ b/blogs/ntu_blog.html
@@ -11,10 +11,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="../index.html#one" class="title">Blogs</a>
 				<nav>
 					<ul>
 						<li><a href="../index.html">Home</a></li>
+						<li><a href="../index.html#one">Blogs</a></li>
+						<li><a href="../index.html#two">Projects</a></li>
 					</ul>
 				</nav>
 			</header>
