add date in ntu_blog

--- a/blogs/ntu_blog.html
+++ b/blogs/ntu_blog.html
@@ -27,6 +27,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Research Internship at NTU</h1>
+							<span style="font-size: 0.9em; color: #aaa;">July 17, 2018</span>
 							<span class="image fit"><img src="../images/ntu_blog/kalp1.jpeg" alt="looking into marina bay sands" /></span>
 							<h2>Making it there</h2>
 							<p>At the start of internship season, which generally kicks off as soon as summer vacation ends, I was pretty sure that I will not be going to any coding companies and was unsure about spending my next summers in some core company or in some university. Keeping that in mind, I start preparing for two main core companies which came to our college i.e Texas Instruments and Qualcomm. I got selected for interview round for both companies but finally didn’t make it up to any of them either. I can write a separate blog post regarding that context but it is better if you heard/read from the guy who got selected because I am here to tell an altogether different story of a ‘research internship’.</p>
