--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
-							<p>Web apps designed by me. Some of them are useful and some are just hobby thing.</p>
+							<p>Few projects that I did. Some are hobby ones and some are part of coursework/professional life.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fas fa-chart-line"></span>
