add home_cam_bot project

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 							<p>Few projects that I did. Some are hobby ones and some are part of coursework/professional life.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fas fa-chart-line"></span>
-									<h3><a href="projects/stock_forecast.html">Stock Market Forecaster</a></h3>
-									<p>This app requires tickertape stock symbol. Thereafter it forecast the data based on the previous years data</p>
+									<span class="icon solid major fas fa-camera"></span>
+									<h3><a href="projects/home_camera_bot.html">Motion detection tool for home CCTV camera</a></h3>
+									<p>A Python-based CCTV surveillance tool that fetches multi-camera streams, detects motion in real-time, records clips, and sends instant Telegram alerts—all while managing storage and logs automatically</p>
 								</section>
 								<section>
 									<span class="icon solid major fas fa-book-reader"></span>
