remove learn more section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 									<p>This app would show the news and also you can take/delete notes</p>
 								</section>
 							</div>
-							<ul class="actions">
+							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
