human vs corp article

--- a/index.html
+++ b/index.html
@@ -68,31 +68,58 @@
 									</ul>
 								</div>
 							</div>
-						</section>						
+						</section>		
+						<section>
+							<a class="image" class="image fit"><img src="images/human_vs_corporate/human_vs_corporate.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Human v/s Corporate analogy</h2>
+									<p>Fun analogy between human body parts and corporate teams. Let's find out which body part you're 😛</p>
+									<ul class="actions">
+										<li><a href="blogs/human_vs_corp.html" class="button">Read Full Article</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>					
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Projects</h2>
-							<p>Few projects that I did. Some are hobby ones and some are part of coursework/professional life.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fas fa-camera"></span>
-									<h3><a href="projects/home_camera_bot.html">Motion detection tool for home CCTV camera</a></h3>
-									<p>A Python-based CCTV surveillance tool that fetches multi-camera streams, detects motion in real-time, records clips, and sends instant Telegram alerts—all while managing storage and logs automatically</p>
-								</section>
-								<section>
-									<span class="icon solid major fas fa-book-reader"></span>
-									<h3><a href="projects/news.html">News and Notes App</a></h3>
-									<p>This app would show the news and also you can take/delete notes</p>
-								</section>
-							</div>
-							<!-- <ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul> -->
-						</div>
-					</section>
+				<section id="two" class="wrapper style3 fade-up">
+					<div class="inner">
+						<h2>Projects</h2>
+						<p>Few projects that I did. Some are hobby ones and some are part of coursework/professional life.</p>
+						<table style="width: 100%; border-collapse: separate; border-spacing: 2rem;">
+							<tr>
+								<td>
+									<section>
+										<span class="icon solid major fas fa-camera"></span>
+										<h3><a href="projects/home_camera_bot.html">Motion detection tool for home CCTV camera</a></h3>
+										<p>A Python-based CCTV surveillance tool that fetches multi-camera streams, detects motion in real-time, records clips, and sends instant Telegram alerts—all while managing storage and logs automatically</p>
+									</section>
+								</td>
+								<td>
+									<section>
+										<span class="icon solid major fas fa-book-reader"></span>
+										<h3><a href="projects/news.html">News and Notes App</a></h3>
+										<p>This app would show the news and also you can take/delete notes</p>
+									</section>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<!-- <section>
+										<span class="icon solid major fas fa-book-reader"></span>
+										<h3><a href="projects/tic_tac_toe.html">News and Notes App</a></h3>
+										<p>This app would show the news and also you can take/delete notes</p>
+									</section> -->
+								</td>
+								<td>
+									<!-- Optional: Empty cell if you don't have content -->
+								</td>
+							</tr>
+						</table>
+					</div>
+				</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
