add tic tac toe example

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 							</tr>
 							<tr>
 								<td>
-									<!-- <section>
-										<span class="icon solid major fas fa-book-reader"></span>
-										<h3><a href="projects/tic_tac_toe.html">News and Notes App</a></h3>
-										<p>This app would show the news and also you can take/delete notes</p>
-									</section> -->
+									<section>
+										<span class="icon solid major fas fa-th"></span>
+										<h3><a href="projects/tic_tac_toe.html">Tic Tac Toe Game</a></h3>
+										<p>Tic tac toe game trained using different RL agents/bot</p>
+									</section>
 								</td>
 								<td>
 									<!-- Optional: Empty cell if you don't have content -->
