add kalimba blog

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
 									</ul>
 								</div>
 							</div>
+						</section>		
+						<section>
+							<a class="image" class="image fit"><img src="images/human_vs_corporate/human_vs_corporate.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Human v/s Corporate analogy</h2>
+									<p>Fun analogy between human body parts and corporate teams. Let's find out which body part you're 😛</p>
+									<ul class="actions">
+										<li><a href="blogs/kalimba.html" class="button">Read Full Article</a></li>
+									</ul>
+								</div>
+							</div>
 						</section>					
 					</section>
 
