--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 							</div>
 						</section>		
 						<section>
-							<a class="image" class="image fit"><img src="images/human_vs_corporate/human_vs_corporate.png" alt="" data-position="center center" /></a>
+							<a class="image" class="image fit"><img src="images/kalimba/kalimba_thumbnail.png" alt="" data-position="left center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Human v/s Corporate analogy</h2>
-									<p>Fun analogy between human body parts and corporate teams. Let's find out which body part you're 😛</p>
+									<h2>Kalimba</h2>
+									<p>Small blog about my learning with kalimba and few initially recorded covers</p>
 									<ul class="actions">
-										<li><a href="blogs/kalimba.html" class="button">Read Full Article</a></li>
+										<li><a href="blogs/kalimba.html" class="button">Read Full Blog</a></li>
 									</ul>
 								</div>
 							</div>
