--- a/blogs/kalimba.html
+++ b/blogs/kalimba.html
@@ -28,7 +28,7 @@
                     <span style="font-size: 0.9em; color: #aaa;">Oct 17, 2025</span>
                     <br><br>
                     
-                    <p>Have you ever held an instrument that feels like it holds a little bit of magic? For me, that’s the kalimba. A small wooden box that fits in the palms of your hands, with delicate metal tines that sing with a simple flick of a thumb. Its sound is like a music box, or a gentle rainfall—pure, ethereal, and surprisingly full of emotion. ✨</p>
+                    <p>Have you ever held an instrument that feels like it holds a little bit of magic? For me, that’s the kalimba. A small wooden box that fits in the palms of your hands, with metal tines that sing with a simple flick of a thumb. Its sound is like a music box, or a gentle rainfall—pure, ethereal, and surprisingly full of emotion. ✨</p>
 
                     <p>It's this simple magic that drew me to explore some of my favorite melodies on it. I wanted to see if I could translate the grand, sweeping emotions of iconic Bollywood songs into the kalimba's gentle voice.</p>
 
@@ -45,7 +45,7 @@
                     <hr>
 
                     <h2>Finding Retro Joy: Om Shanti Om</h2>
-                    <p>On the other end of the spectrum is the vibrant, retro energy of "Om Shanti Om." This song is all about grandeur, drama, and pure, unadulterated fun.</p>
+                    <p>On the other end of the spectrum is the vibrant, retro energy of "Om Shanti Om." This song is all about grandeur, drama.</p>
                     <p>🎶 <strong>Listen to my kalimba cover of "Om Shanti Om" here: </p>
                         <video width="350" height="360" controls>
                             <source src="../images/kalimba/om_shanti_om.mp4" type="video/mp4">
